--- a/KSPersonalFinance/Source/Views/KSYearPickerView/KSYearPickerViewController.xib
+++ b/KSPersonalFinance/Source/Views/KSYearPickerView/KSYearPickerViewController.xib
@@ -18,38 +18,91 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IKV-dD-uVT">
-                    <rect key="frame" x="40" y="120" width="225" height="270"/>
-                    <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="270" id="NAp-RP-xgS"/>
-                        <constraint firstAttribute="width" constant="225" id="PNI-NY-h7E"/>
-                    </constraints>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="j6U-tZ-Uja"/>
-                        <outlet property="delegate" destination="-1" id="pyn-Bl-Vpg"/>
-                    </connections>
-                </pickerView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Whw-pL-brT">
-                    <rect key="frame" x="50" y="343" width="64" height="30"/>
-                    <state key="normal" title="Cancel"/>
-                    <connections>
-                        <action selector="cancel:" destination="-1" eventType="touchUpInside" id="jwq-Fv-tcX"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nc4-ha-F5v">
-                    <rect key="frame" x="165" y="336" width="89" height="43"/>
-                    <state key="normal" title="set Date"/>
-                    <connections>
-                        <action selector="confirmDate:" destination="-1" eventType="touchUpInside" id="qwU-OX-iKB"/>
-                    </connections>
-                </button>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tQW-1s-qrR">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <view key="contentView" multipleTouchEnabled="YES" contentMode="center" id="j0y-v4-SeO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lGv-7S-rld">
+                                <rect key="frame" x="85" y="190" width="150" height="187"/>
+                                <subviews>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IKV-dD-uVT">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="-1" id="j6U-tZ-Uja"/>
+                                            <outlet property="delegate" destination="-1" id="pyn-Bl-Vpg"/>
+                                        </connections>
+                                    </pickerView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Whw-pL-brT">
+                                        <rect key="frame" x="0.0" y="157" width="64" height="30"/>
+                                        <state key="normal" title="Cancel">
+                                            <color key="titleColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.98039215690000003" alpha="0.98009751769999998" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="cancel:" destination="-1" eventType="touchUpInside" id="jwq-Fv-tcX"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nc4-ha-F5v">
+                                        <rect key="frame" x="80" y="157" width="70" height="30"/>
+                                        <state key="normal" title="set Date">
+                                            <color key="titleColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.98039215690000003" alpha="0.98009751769999998" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="confirmDate:" destination="-1" eventType="touchUpInside" id="qwU-OX-iKB"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pIo-aJ-i5J">
+                                        <rect key="frame" x="75" y="150" width="1" height="37"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="37" id="CLd-kd-PFd"/>
+                                            <constraint firstAttribute="width" constant="1" id="dMI-4c-twx"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7JF-0X-8vE">
+                                        <rect key="frame" x="0.0" y="150" width="150" height="1"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.38823529410000002" green="0.4823529412" blue="0.81960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="IKV-dD-uVT" secondAttribute="trailing" id="0Pt-A5-vNO"/>
+                                    <constraint firstItem="pIo-aJ-i5J" firstAttribute="leading" secondItem="Whw-pL-brT" secondAttribute="trailing" constant="11" id="7ah-EA-gfr"/>
+                                    <constraint firstItem="pIo-aJ-i5J" firstAttribute="bottom" secondItem="Nc4-ha-F5v" secondAttribute="bottom" id="AWj-ar-vph"/>
+                                    <constraint firstAttribute="bottom" secondItem="pIo-aJ-i5J" secondAttribute="bottom" id="FFu-oS-XFe"/>
+                                    <constraint firstItem="7JF-0X-8vE" firstAttribute="top" secondItem="IKV-dD-uVT" secondAttribute="bottom" id="FQh-cY-GbS"/>
+                                    <constraint firstItem="pIo-aJ-i5J" firstAttribute="centerX" secondItem="7JF-0X-8vE" secondAttribute="centerX" id="HXb-9x-6Bd"/>
+                                    <constraint firstItem="Nc4-ha-F5v" firstAttribute="leading" secondItem="pIo-aJ-i5J" secondAttribute="trailing" constant="4" id="S78-Zr-RBP"/>
+                                    <constraint firstItem="IKV-dD-uVT" firstAttribute="top" secondItem="lGv-7S-rld" secondAttribute="top" id="UD0-UF-xIu"/>
+                                    <constraint firstItem="IKV-dD-uVT" firstAttribute="leading" secondItem="lGv-7S-rld" secondAttribute="leading" id="WWP-UG-Xxq"/>
+                                    <constraint firstItem="pIo-aJ-i5J" firstAttribute="bottom" secondItem="Whw-pL-brT" secondAttribute="bottom" id="YCT-Pv-jwZ"/>
+                                    <constraint firstItem="7JF-0X-8vE" firstAttribute="leading" secondItem="lGv-7S-rld" secondAttribute="leading" id="duR-WM-YN6"/>
+                                    <constraint firstItem="pIo-aJ-i5J" firstAttribute="top" secondItem="7JF-0X-8vE" secondAttribute="top" id="fs2-NY-oHM"/>
+                                    <constraint firstAttribute="trailing" secondItem="Nc4-ha-F5v" secondAttribute="trailing" id="gjx-Rc-Zt6"/>
+                                    <constraint firstItem="Whw-pL-brT" firstAttribute="leading" secondItem="lGv-7S-rld" secondAttribute="leading" id="pTa-RD-vpL"/>
+                                    <constraint firstAttribute="trailing" secondItem="7JF-0X-8vE" secondAttribute="trailing" id="uuo-gR-XZL"/>
+                                    <constraint firstItem="pIo-aJ-i5J" firstAttribute="top" secondItem="7JF-0X-8vE" secondAttribute="bottom" constant="-1" id="x1Q-dV-qlq"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="lGv-7S-rld" firstAttribute="top" secondItem="j0y-v4-SeO" secondAttribute="top" constant="190" id="1gi-XT-nmH"/>
+                            <constraint firstAttribute="bottom" secondItem="lGv-7S-rld" secondAttribute="bottom" constant="191" id="5sr-eP-VpD"/>
+                            <constraint firstAttribute="trailing" secondItem="lGv-7S-rld" secondAttribute="trailing" constant="85" id="E3c-ox-9Iv"/>
+                            <constraint firstItem="lGv-7S-rld" firstAttribute="leading" secondItem="j0y-v4-SeO" secondAttribute="leading" constant="85" id="j4N-HR-Ngg"/>
+                        </constraints>
+                    </view>
+                    <blurEffect style="dark"/>
+                </visualEffectView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="IKV-dD-uVT" firstAttribute="leading" secondItem="bcI-Fk-d9C" secondAttribute="leading" constant="40" id="X6Q-hi-AIC"/>
-                <constraint firstItem="IKV-dD-uVT" firstAttribute="top" secondItem="bcI-Fk-d9C" secondAttribute="top" constant="120" id="dYh-5K-18W"/>
-                <constraint firstAttribute="bottom" secondItem="IKV-dD-uVT" secondAttribute="bottom" constant="178" id="rAR-Xa-OQu"/>
+                <constraint firstAttribute="bottom" secondItem="tQW-1s-qrR" secondAttribute="bottom" id="183-Ni-8PA"/>
+                <constraint firstAttribute="trailing" secondItem="tQW-1s-qrR" secondAttribute="trailing" id="SM7-nQ-Jd3"/>
+                <constraint firstItem="tQW-1s-qrR" firstAttribute="leading" secondItem="bcI-Fk-d9C" secondAttribute="leading" id="hQA-dw-d5H"/>
+                <constraint firstItem="tQW-1s-qrR" firstAttribute="top" secondItem="bcI-Fk-d9C" secondAttribute="top" id="yod-QH-jUl"/>
             </constraints>
             <point key="canvasLocation" x="517" y="362"/>
         </view>
